[package]
name = "robot-rate-calculator"
version = "0.1.0"
authors = ["Li Honghao <honghao@comp.nus.edu.sg>", "Wu Yijing <wuyijing@u.nus.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"